unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__CustomQuestion1__c.field-meta.xml
<CustomField>
    <fullName>Calendly__CustomQuestion1__c</fullName>
    <label>CustomQuestion1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>