unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__CustomQuestion2__c.field-meta.xml
<CustomField>
    <fullName>Calendly__CustomQuestion2__c</fullName>
    <label>CustomQuestion2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>