unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__CustomQuestion4__c.field-meta.xml
<CustomField>
    <fullName>Calendly__CustomQuestion4__c</fullName>
    <label>CustomQuestion4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>