unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__CustomResponse3__c.field-meta.xml
<CustomField>
    <fullName>Calendly__CustomResponse3__c</fullName>
    <label>CustomResponse3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>