unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__CustomResponse4__c.field-meta.xml
<CustomField>
    <fullName>Calendly__CustomResponse4__c</fullName>
    <label>CustomResponse4</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>