unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__EventCancelerName__c.field-meta.xml
<CustomField>
    <fullName>Calendly__EventCancelerName__c</fullName>
    <label>Event Canceler Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>