unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__EventPrimaryPublisherEmail__c.field-meta.xml
<CustomField>
    <fullName>Calendly__EventPrimaryPublisherEmail__c</fullName>
    <label>Event Primary Publisher Email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>