unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__EventPrimaryPublisherName__c.field-meta.xml
<CustomField>
    <fullName>Calendly__EventPrimaryPublisherName__c</fullName>
    <label>Event Primary Publisher Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>