unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__EventStartTime__c.field-meta.xml
<CustomField>
    <fullName>Calendly__EventStartTime__c</fullName>
    <label>Event Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>