unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__EventSubject__c.field-meta.xml
<CustomField>
    <fullName>Calendly__EventSubject__c</fullName>
    <label>Event Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>