unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__EventTypeKind__c.field-meta.xml
<CustomField>
    <fullName>Calendly__EventTypeKind__c</fullName>
    <label>Event Type Kind</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>