unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__EventTypeSlug__c.field-meta.xml
<CustomField>
    <fullName>Calendly__EventTypeSlug__c</fullName>
    <label>Event Type Slug</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>