unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__InviteeCanceled__c.field-meta.xml
<CustomField>
    <fullName>Calendly__InviteeCanceled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invitee Canceled</label>
    <type>Checkbox</type>
</CustomField>