unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__InviteeCanceledAt__c.field-meta.xml
<CustomField>
    <fullName>Calendly__InviteeCanceledAt__c</fullName>
    <label>Invitee Canceled At</label>
    <type>DateTime</type>
</CustomField>