unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__InviteeCancelerName__c.field-meta.xml
<CustomField>
    <fullName>Calendly__InviteeCancelerName__c</fullName>
    <label>Invitee Canceler Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>