unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__InviteeCancelReason__c.field-meta.xml
<CustomField>
    <fullName>Calendly__InviteeCancelReason__c</fullName>
    <label>Invitee Cancel Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>