unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__InviteeCreatedAt__c.field-meta.xml
<CustomField>
    <fullName>Calendly__InviteeCreatedAt__c</fullName>
    <label>Invitee Created At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>