unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__InviteeFirstName__c.field-meta.xml
<CustomField>
    <fullName>Calendly__InviteeFirstName__c</fullName>
    <label>Invitee First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>