unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__InviteeLastName__c.field-meta.xml
<CustomField>
    <fullName>Calendly__InviteeLastName__c</fullName>
    <label>Invitee Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>