unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__InviteeName__c.field-meta.xml
<CustomField>
    <fullName>Calendly__InviteeName__c</fullName>
    <label>Invitee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>