unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__InviteeTimezone__c.field-meta.xml
<CustomField>
    <fullName>Calendly__InviteeTimezone__c</fullName>
    <label>Invitee Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>