unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__InviteeUuid__c.field-meta.xml
<CustomField>
    <fullName>Calendly__InviteeUuid__c</fullName>
    <externalId>true</externalId>
    <label>Invitee Uuid</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>