unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__RequestId__c.field-meta.xml
<CustomField>
    <fullName>Calendly__RequestId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>unique identifier of a CalendlyAction</description>
    <externalId>true</externalId>
    <label>Request Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>