unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__UtmCampaign__c.field-meta.xml
<CustomField>
    <fullName>Calendly__UtmCampaign__c</fullName>
    <label>UtmCampaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>