unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__UtmMedium__c.field-meta.xml
<CustomField>
    <fullName>Calendly__UtmMedium__c</fullName>
    <label>UtmMedium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>