unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__UtmSource__c.field-meta.xml
<CustomField>
    <fullName>Calendly__UtmSource__c</fullName>
    <label>UtmSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>