unpackaged/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__UtmTerm__c.field-meta.xml
<CustomField>
    <fullName>Calendly__UtmTerm__c</fullName>
    <label>UtmTerm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>