unpackaged/main/default/objects/Calendly__CalendlyAction__c/listViews/Calendly__All.listView-meta.xml
<ListView>
    <fullName>Calendly__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Calendly__InviteeName__c</columns>
    <columns>Calendly__InviteeEmail__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Calendly__ObjectId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>